--- a/style.css
+++ b/style.css
@@ -25,8 +25,17 @@ html {
   border: none;
   border-radius: 3px;
   height: 2rem;
-  width: 20vw;
+  width: 50vw;
   margin: 0 1rem;
+}
+
+.search button {
+  border: none;
+  border-radius: 5px;
+  background-color: rgb(0 0 0/ 15%);
+  color: white;
+  height: 2rem;
+  width: 4rem;
 }
 
 section {
@@ -41,10 +50,11 @@ section {
 }
 
 section h1 {
-  padding: 0 3rem 3rem;
+  margin: 0 3rem 3rem;
   font-size: 3rem;
   color: #ffffff;
   text-align: center;
+  letter-spacing: 2px;
 }
 
 .current {
@@ -77,7 +87,8 @@ section h1 {
 }
 
 .week-temps {
-  display: flex;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(150px, min-content));
   justify-content: space-evenly;
 }
 
@@ -91,4 +102,10 @@ section h1 {
   padding: 1rem;
   border-radius: 5px;
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+}
+
+@media only screen and (max-width: 600px) {
+  .search input {
+    width: 50vw;
+  }
 }
