--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 html {
   box-sizing: border-box;
+  min-width: min-content;
 }
 *,
 *:before,
@@ -108,5 +109,9 @@ section h1 {
 @media only screen and (max-width: 600px) {
   .search input {
     width: 50vw;
+  }
+
+  .week-temps {
+    margin-bottom: 2rem;
   }
 }
